--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta charset="utf-8" />
 </head>
 <body>
-<script src="main.js"></script>
+<script src="lesson-2.js"></script>
 </body>
 </html>
